--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var line = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.close); });
 
-d3.tsv("data.tsv", function(d) {
+d3.tsv("https://raw.githubusercontent.com/MagnusHambleton/life-expectancy/master/data.tsv", function(d) {
   d.date = parseTime(d.date);
   d.close = +d.close;
   return d;
