--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta property="og:image" content="https://cdn-images-1.medium.com/max/1200/1*Tp6z3OOzT4GNlFQq3yME1w.png">
 <style>
 
 .axis--x path {
