--- a/index.html
+++ b/index.html
@@ -1,71 +1,29 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta property="og:image" content="https://cdn-images-1.medium.com/max/1200/1*Tp6z3OOzT4GNlFQq3yME1w.png">
-<style>
+<html>
+ <head>
+    <title>Bar Transition Example</title>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="chart.js"></script>
+    <style type="text/css">
+        #demo { 
+            float: left;        
+        }
+    </style>
+ </head>
+ <body>
+    
+    <div id="demo">
+        <div id="buttons">
+        <button id="data1">Move</button>
+        <button id="data2">Move back</button>
+        <br>
+        </div>
+    <svg width="960" height="500"></svg>
+    </div>
+    <script type="text/javascript">
+        init();
+    </script>
 
-.axis--x path {
-  display: none;
-}
 
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-</style>
-<svg width="960" height="500"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script>
-
-var svg = d3.select("svg"),
-    margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = +svg.attr("width") - margin.left - margin.right,
-    height = +svg.attr("height") - margin.top - margin.bottom,
-    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var parseTime = d3.timeParse("%d-%b-%y");
-
-var x = d3.scaleTime()
-    .rangeRound([0, width]);
-
-var y = d3.scaleLinear()
-    .rangeRound([height, 0]);
-
-var line = d3.line()
-    .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.close); });
-
-d3.tsv("https://raw.githubusercontent.com/MagnusHambleton/life-expectancy/master/data.tsv", function(d) {
-  d.date = parseTime(d.date);
-  d.close = +d.close;
-  return d;
-}, function(error, data) {
-  if (error) throw error;
-
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain(d3.extent(data, function(d) { return d.close; }));
-
-  g.append("g")
-      .attr("class", "axis axis--x")
-      .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
-
-  g.append("g")
-      .attr("class", "axis axis--y")
-      .call(d3.axisLeft(y))
-    .append("text")
-      .attr("fill", "#000")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", "0.71em")
-      .style("text-anchor", "end")
-      .text("Price ($)");
-
-  g.append("path")
-      .datum(data)
-      .attr("class", "line")
-      .attr("d", line);
-});
-
-</script>
+ </body>
+</html>\
