The line is ALIVE

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
  <head>
     <title>Bar Transition Example</title>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="chart.js"></script>
+    <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+    
     <style type="text/css">
         #demo { 
             float: left;        
@@ -19,6 +19,7 @@
         <br>
         </div>
     <svg width="960" height="500"></svg>
+    <script type="text/javascript" src="chart.js"></script>
     </div>
     <script type="text/javascript">
         init();
@@ -26,4 +27,4 @@
 
 
  </body>
-</html>\
+</html>
