added animation and correction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
     </style>
  </head>
- <body>
+ <body style="background-color:#FADE29">
     
     <div id="demo">
         <div id="buttons">
