Made checkboxes change the data

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <div class="control-group">
         <h1>Checkboxes</h1>
         <label class="control control--checkbox">External causes of morbidity and mortality
-          <input type="checkbox" checked="checked"/>
+          <input class='checkbox ext' type="checkbox" checked="checked"/>
           <div class="control__indicator"></div>
         </label>
         <label class="control control--checkbox">Cancer
-          <input type="checkbox"/>
+          <input class='checkbox canc' type="checkbox"/>
           <div class="control__indicator"></div>
         </label>
         <label class="control control--checkbox">Diseases of the circulatory system
-          <input type="checkbox"/>
+          <input class='checkbox circ' type="checkbox"/>
           <div class="control__indicator"></div>
         </label>
       </div>
