--- a/index.html
+++ b/index.html
@@ -9,31 +9,103 @@
  <body style="background-color: lightgrey">
     
     <div id="demo">
-        <div id="buttons">
-        <button id="data1">Move</button>
-        <button id="data2">Move back</button>
-        <br>
+      <div class="container">
+        <div class="control-group">
+          <h1>Causes of Death</h1>
+          <label class="control control--checkbox">Diseases of the circulatory system
+            <input class='checkbox circ' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Symptoms, signs and abnormal clinical and laboratory findings, not elsewhere classified
+            <input class='checkbox abnorm' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Diseases of the respiratory system
+            <input class='checkbox resp' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Mental and behavioural disorders
+            <input class='checkbox ment' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Cancer
+            <input class='checkbox canc' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Diseases of the nervous system
+            <input class='checkbox nerv' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Other accidents and murders
+            <input class='checkbox acc' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Diseases of the genitourinary system
+            <input class='checkbox geni' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Endocrine, nutritional and metabolic diseases
+            <input class='checkbox endo' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">External causes of morbidity and mortality
+            <input class='checkbox ext' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Digestive, skin and muscle diseases
+            <input class='checkbox dig' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Infectious and parasitic diseases
+            <input class='checkbox infect' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Blood, eye and ear diseases
+            <input class='checkbox blood' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Skin Cancer
+            <input class='checkbox skin_canc' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Traffic accidents
+            <input class='checkbox traff' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">HIV
+            <input class='checkbox hiv' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Deaths due to childbirth or congenital diseases
+            <input class='checkbox child' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
+
+          <label class="control control--checkbox">Malaria
+            <input class='checkbox mal' type="checkbox" checked="checked"/>
+            <div class="control__indicator"></div>
+          </label>
         </div>
+      </div>
     <svg width="600" height="500"></svg>
     <svg class='numbers' width="400" height="500"></svg>
 
-    </div>
-    <div class="container">
-      <div class="control-group">
-        <h1>Checkboxes</h1>
-        <label class="control control--checkbox">External causes of morbidity and mortality
-          <input class='checkbox ext' type="checkbox" checked="checked"/>
-          <div class="control__indicator"></div>
-        </label>
-        <label class="control control--checkbox">Cancer
-          <input class='checkbox canc' type="checkbox"/>
-          <div class="control__indicator"></div>
-        </label>
-        <label class="control control--checkbox">Diseases of the circulatory system
-          <input class='checkbox circ' type="checkbox"/>
-          <div class="control__indicator"></div>
-        </label>
-      </div>
     </div>
     <br>
     <svg class='slider' width="960" height="500"></svg>
