--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                 <div class="control__indicator"></div>
               </label>
 
+              <label class="control control--checkbox">External causes of morbidity and mortality
+                <input class='checkbox ext' type="checkbox" checked="checked"/>
+                <div class="control__indicator"></div>
+              </label>
+
+              <label class="control control--checkbox">Cancer
+                <input class='checkbox canc' type="checkbox" checked="checked"/>
+                <div class="control__indicator"></div>
+              </label>
+
               <label class="control control--checkbox">Symptoms, signs and abnormal clinical and laboratory findings, not elsewhere classified
                 <input class='checkbox abnorm' type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
@@ -36,11 +46,6 @@
 
               <label class="control control--checkbox">Mental and behavioural disorders
                 <input class='checkbox ment' type="checkbox" checked="checked"/>
-                <div class="control__indicator"></div>
-              </label>
-
-              <label class="control control--checkbox">Cancer
-                <input class='checkbox canc' type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
               </label>
 
@@ -63,11 +68,6 @@
                 <input class='checkbox endo' type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
               </label>
-
-              <label class="control control--checkbox">External causes of morbidity and mortality
-                <input class='checkbox ext' type="checkbox" checked="checked"/>
-                <div class="control__indicator"></div>
-              </label>
             </div>
             <div class="control-group">
               <label class="control control--checkbox">Digestive, skin and muscle diseases
@@ -85,7 +85,7 @@
                 <div class="control__indicator"></div>
               </label>
 
-              <label class="control control--checkbox">Skin Cancer
+              <label class="control control--checkbox">Skin cancer
                 <input class='checkbox skin_canc' type="checkbox" checked="checked"/>
                 <div class="control__indicator"></div>
               </label>
