--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://cdn-images-1.medium.com/fit/c/256/256/1*Tp6z3OOzT4GNlFQq3yME1w.png" class="js-favicon">
  </head>
  <body>
     
@@ -121,8 +122,9 @@
         </div>
       </div>
 
-
+	<p>Source: WHO Mortality Database 2009. Data has been aggregated and processed to be in the correct format. Although it is supposed to apply at a global level, the data is biased towards developed countries due to lack of high quality mortality data from developing countries.</p>
     </div>
+
     <br>
 
       <script type="text/javascript" src="chart.js"></script>
