--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-	<p>Source: WHO Mortality Database 2009. Data has been aggregated and processed to be in the correct format. Although it is supposed to apply at a global level, the data is biased towards developed countries due to lack of high quality mortality data from developing countries.</p>
+	<p>Source: <a href="http://www.who.int/healthinfo/mortality_data/en/">WHO Mortality Database 2009</a>. Data has been aggregated and processed to be in the correct format. Although it is supposed to apply at a global level, the data is biased towards developed countries due to lack of high quality mortality data from developing countries.</p>
     </div>
 
     <br>
