Added detail to titles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <div class="control__indicator"></div>
             </label>
 
-            <label class="control control--checkbox">External causes of morbidity and mortality
+            <label class="control control--checkbox">External causes of morbidity and mortality (accidents and violence)
               <input class='checkbox ext' type="checkbox" checked="checked"/>
               <div class="control__indicator"></div>
             </label>
@@ -44,7 +44,7 @@
               <div class="control__indicator"></div>
             </label>
 
-            <label class="control control--checkbox">Symptoms, signs and abnormal clinical and laboratory findings, not elsewhere classified
+            <label class="control control--checkbox">Symptoms, signs and abnormal clinical and laboratory findings, not elsewhere classified (other)
               <input class='checkbox abnorm' type="checkbox" checked="checked"/>
               <div class="control__indicator"></div>
             </label>
