--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="https://cdn-images-1.medium.com/fit/c/256/256/1*Tp6z3OOzT4GNlFQq3yME1w.png" class="js-favicon">
+	<meta property="og:title"              content="Life Expectancy Simulator" />
+	<meta property="og:description"        content="How do lifespans change if we cure ageing?" />
+	<meta property="og:image"              content="http://life.analogmantra.com/life_screenshot.png" />
+
  </head>
  <body>
     
